Remove use of deprecated capabilities